fix: scrollbar of death on the right is gone

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ p {
   justify-content: center;
   align-items: center;
   display: flex;
+  position: fixed;
   width: 100%;
   height: 100vh;
 }
